syntax = "proto3";
package game.server;

import "common.proto";

message ServerMessage {
  oneof payload {
    RoomJoined room_joined = 1;
    RoomUpdate room_update = 2;
    GameStarting game_starting = 3;
    GameMessage game_message = 4;
    GameEnded game_ended = 5;
    PlayerLeft player_left = 6;
    Error error = 7;
  }
}

message RoomJoined {
  uint32 player_id = 1;
  string room_code = 2;
  repeated PlayerInfo players = 3;
}

message PlayerInfo {
  uint32 player_id = 1;
  string name = 2;
  bool ready = 3;
}

message RoomUpdate {
  repeated PlayerInfo players = 1;
}

message GameStarting {
  uint32 countdown_seconds = 1;
}

message GameMessage {
  uint32 from_player_id = 1;
  bytes payload = 2;
}

message GameEnded {
  uint32 winner_id = 1;
}

message PlayerLeft {
  uint32 player_id = 1;
}

message Error {
  string message = 1;
}